# blake2b_halo2

./: .gitignore  Cargo.toml  README.md
blake2b_halo2/: .rustfmt.toml  Cargo.toml
blake2b_halo2/benches/: benchmark_optimizations.rs  mocked_proving.rs  performance_graphics.ipynb  pk_generation.rs  proof_generation.rs  utils.rs  verification.rs  vk_generation.rs
blake2b_halo2/benches/report/: index.html
blake2b_halo2/examples/: interface.rs
blake2b_halo2/src/: auxiliar_functions.rs  circuit_runner.rs  example_blake2b_circuit.rs  lib.rs  types.rs
blake2b_halo2/src/base_operations/: addition_mod_64.rs  decompose_16.rs  decompose_8.rs  decomposition.rs  generic_limb_rotation.rs  mod.rs  negate.rs  rotate_63.rs  xor.rs  xor_spread.rs  xor_table.rs
blake2b_halo2/src/base_operations/types/: bit.rs  blake2b_word.rs  byte.rs  mod.rs  row.rs
blake2b_halo2/src/blake2b/: blake2b.rs  blake2b_circuit.rs  blake2b_instructions.rs  circuit.rs  circuit_runner.rs  instructions.rs  mod.rs
blake2b_halo2/src/blake2b/chips/: blake2b_chip.rs  blake2b_generic.rs  blake2b_instructions.rs  mod.rs  opt_4_limbs.rs  opt_recycle.rs  opt_spread.rs  utils.rs
blake2b_halo2/src/chips/: addition_mod_64.rs  addition_mod_64_chip.rs  decompose_16.rs  decompose_16_chip.rs  decompose_8.rs  decompose_8_chip.rs  decomposition.rs  decomposition_trait.rs  generic_limb_rotation.rs  generic_limb_rotation_chip.rs  mod.rs  negate.rs  negate_chip.rs  rotate_24_chip.rs  rotate_63.rs  rotate_63_chip.rs  xor_chip.rs  xor_chip_spread.rs  xor_spread.rs  xor_table.rs
blake2b_halo2/src/chips/addition/: mod.rs
blake2b_halo2/src/chips/blake2b_implementations/: blake2b_chip.rs  blake2b_chip_a.rs  blake2b_chip_b.rs  blake2b_chip_c.rs  blake2b_chip_opt_4_limbs.rs  blake2b_chip_opt_recycle.rs  blake2b_chip_opt_spread.rs  blake2b_chip_optimization.rs  blake2b_instructions.rs  mod.rs
blake2b_halo2/src/circuits/: blake2b_circuit.rs
blake2b_halo2/src/examples/: blake2b_circuit.rs  circuit_runner.rs  mod.rs
blake2b_halo2/src/tests/: mod.rs
blake2b_halo2/src/tests/test_blake2b/: circuit_in_production.rs  mod.rs  smoke_tests.rs  variable_key_length_tests.rs  variable_output_length_tests.rs  vector_tests.rs
blake2b_halo2/src/tests/test_negate/: mod.rs  negate_circuit.rs
blake2b_halo2/src/tests/tests_8bits_addition/: addition_mod_64_circuit_8bits.rs  addition_mod_64_circuit_8bits_autogenerated.rs  mod.rs  test_addition_mod_64_with_autogenerated_trace.rs
blake2b_halo2/src/tests/tests_addition/: addition_mod_64_circuit_16bits.rs  addition_mod_64_circuit_8bits.rs  addition_mod_64_circuit_8bits_autogenerated.rs  addition_mod_64_tests_16bits.rs  mod.rs  test_addition_mod_64_with_autogenerated_trace.rs  test_addition_mod_64_with_processed_trace.rs
blake2b_halo2/src/tests/tests_addition_mod_64/: addition_mod_64_circuit_16bits.rs  mod.rs
blake2b_halo2/src/tests/tests_rotation/: limb_rotation_circuit.rs  limb_rotation_circuit_autogenerated.rs  mod.rs  rotation_63_circuit_16bit_limbs.rs  rotation_63_circuit_8bit_limbs.rs  rotation_63_cirtuit_8bit_limbs_autogenerated.rs  test_limb_rotation_16_24_32_autogenerated.rs  test_rotation_24_16_bit_limbs.rs  test_rotation_63_16_bit_limbs.rs  test_rotation_63_8_bit_limbs_autogenerated.rs
blake2b_halo2/src/tests/tests_xor/: mod.rs  tests_xor_with_generated_trace.rs  tests_xor_with_processed_trace.rs  xor_circuit.rs  xor_circuit_autogenerated.rs
blake2b_halo2/src/types/: bit.rs  blake2b_word.rs  byte.rs  mod.rs  row.rs
blake2b_halo2/src/usage_utils/: blake2b_circuit.rs
blake2b_halo2_interface/: Cargo.toml
blake2b_halo2_interface/src/: inputs.json  main.rs
halo_blake2b_primitives/: .rustfmt.toml  Cargo.toml
halo_blake2b_primitives/src/: auxiliar_functions.rs  lib.rs  main.rs
halo_blake2b_primitives/src/chips/: addition_mod_64_chip.rs  blake2b_chip_sum_with_4_limbs.rs  blake2b_table16_chip.rs  decompose_16_chip.rs  decompose_8_chip.rs  decomposition_trait.rs  generic_limb_rotation_chip.rs  mod.rs  negate_chip.rs  rotate_24_chip.rs  rotate_32_chip.rs  rotate_63_chip.rs  sum_8bits_chip.rs  sum_mod64_chip.rs  xor_chip.rs
halo_blake2b_primitives/src/circuits/: blake2b_circuit.rs  mod.rs  short_circuit.rs
halo_blake2b_primitives/src/tests/: mod.rs  tests_8bits_addition.rs  tests_rotation.rs  tests_xor.rs
interface/: Cargo.toml
interface/src/: inputs.json  main.rs
(+116 files in other folders)
