[package]
name = "blake2b_halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
ff = "0.13"
halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
rand = "0.8"
hex = "0.4.3"
cfg-if = "1.0.0"
num-bigint = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
rust_implementation = { path = "../rust_implementation" }

[[bench]]
name = "mocked_proving"
harness = false

[[bench]]
name = "pk_generation"
harness = false

[[bench]]
name = "vk_generation"
harness = false

[[bench]]
name = "proof_generation"
harness = false

[features]
default = [] # No default features to avoid undesired behaviour

sum_with_8_limbs = []
sum_with_4_limbs = []

xor_with_table = []
xor_with_spread = []

opt_4_limbs = ["sum_with_4_limbs", "xor_with_table"]
opt_recycle = ["sum_with_8_limbs", "xor_with_table"]
opt_spread  = ["sum_with_8_limbs", "xor_with_spread"]