[package]
name = "blake2b_halo2_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b_primitives = { path = "../halo_blake2b_primitives" }
blake2b = { path = "../blake2b_implementation_rust" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
ff = "0.13"
hex = "0.4.3"
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", features = ["cost-estimator"] }