[package]
name = "blake2b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
ff = "0.13"
halo2_proofs = { git = "https://github.com/input-output-hk/halo2" }
rand = "0.8"
hex = "0.4.3"
cfg-if = "1.0.0"

[features]
default = ["sum_with_4_limbs"]
sum_with_8_limbs = []
sum_with_4_limbs = []