[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b_halo2 = { path = "../blake2b_halo2" }
rust_implementation = { path = "../rust_implementation" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
halo2_proofs = { path = "../../halo2" }

